{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 80,
  "lineage": "ea59eaf8-ce20-eef6-68a7-14b31acf5d47",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:vpc/vpc-0600548f19dbecfd0",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-006c6b9b6d75be062",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0be441488ccbf679d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0600548f19dbecfd0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0757533fa76e63184",
            "owner_id": "093646564071",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-vpc",
              "Project": "GPU-Batch-Processing"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "batch_compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:security-group/sg-03f4b2ef35a2c69c3",
            "description": "Security group for Batch compute instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f4b2ef35a2c69c3",
            "ingress": [],
            "name": "gpu-batch-batch-2025111216365953390000000c",
            "name_prefix": "gpu-batch-batch-",
            "owner_id": "093646564071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "gpu-batch-batch-compute-sg",
              "Project": "gpu-batch"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-batch-compute-sg",
              "Project": "gpu-batch"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600548f19dbecfd0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_ops_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:security-group/sg-033ae525c0cc50a35",
            "description": "Security group for data-ops-ui service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033ae525c0cc50a35",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8501
              }
            ],
            "name": "gpu-batch-data-ops-ui-2025111216365898030000000b",
            "name_prefix": "gpu-batch-data-ops-ui-",
            "owner_id": "093646564071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "gpu-batch-data-ops-ui-sg",
              "Project": "gpu-batch"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-data-ops-ui-sg",
              "Project": "gpu-batch"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600548f19dbecfd0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fsx_lustre",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:security-group/sg-0af1eb053cd9d5b23",
            "description": "Security group for FSx Lustre",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af1eb053cd9d5b23",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1018,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f4b2ef35a2c69c3"
                ],
                "self": false,
                "to_port": 1023
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 988,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f4b2ef35a2c69c3"
                ],
                "self": false,
                "to_port": 988
              }
            ],
            "name": "gpu-batch-fsx-2025111216370193430000000f",
            "name_prefix": "gpu-batch-fsx-",
            "owner_id": "093646564071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "gpu-batch-fsx-sg",
              "Project": "gpu-batch"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-fsx-sg",
              "Project": "gpu-batch"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600548f19dbecfd0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.batch_compute",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fsx_self_1018_1023",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1018,
            "id": "sgrule-2444541007",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0af1eb053cd9d5b23",
            "security_group_rule_id": "sgr-0ca0132d605b2e708",
            "self": false,
            "source_security_group_id": "sg-0af1eb053cd9d5b23",
            "timeouts": null,
            "to_port": 1023,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.batch_compute",
            "aws_security_group.fsx_lustre",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fsx_self_988",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 988,
            "id": "sgrule-3455918018",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0af1eb053cd9d5b23",
            "security_group_rule_id": "sgr-0058740e2740ef275",
            "self": false,
            "source_security_group_id": "sg-0af1eb053cd9d5b23",
            "timeouts": null,
            "to_port": 988,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.batch_compute",
            "aws_security_group.fsx_lustre",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:network-acl/acl-003f2e76cf876cd53",
            "default_network_acl_id": "acl-003f2e76cf876cd53",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-003f2e76cf876cd53",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "093646564071",
            "subnet_ids": [
              "subnet-007edacc1d763da46",
              "subnet-0684cfbd466bd450d",
              "subnet-073b7eec843a54a6a",
              "subnet-0d2ee8a569aa772f7"
            ],
            "tags": {
              "Name": "gpu-batch-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-vpc-default",
              "Project": "GPU-Batch-Processing"
            },
            "vpc_id": "vpc-0600548f19dbecfd0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:route-table/rtb-0757533fa76e63184",
            "default_route_table_id": "rtb-0757533fa76e63184",
            "id": "rtb-0757533fa76e63184",
            "owner_id": "093646564071",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "gpu-batch-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-vpc-default",
              "Project": "GPU-Batch-Processing"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0600548f19dbecfd0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:security-group/sg-017a1039aab0d642f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-017a1039aab0d642f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "093646564071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gpu-batch-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-vpc-default",
              "Project": "GPU-Batch-Processing"
            },
            "vpc_id": "vpc-0600548f19dbecfd0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c36051f122c4927",
            "arn": "arn:aws:ec2:us-east-1:093646564071:elastic-ip/eipalloc-06c36051f122c4927",
            "domain": "vpc",
            "id": "eipalloc-06c36051f122c4927",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-195-154-238.compute-1.amazonaws.com",
            "public_ip": "34.195.154.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gpu-batch-vpc-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-vpc-us-east-1a",
              "Project": "GPU-Batch-Processing"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:internet-gateway/igw-0bb013f94a410e1bc",
            "id": "igw-0bb013f94a410e1bc",
            "owner_id": "093646564071",
            "tags": {
              "Name": "gpu-batch-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-vpc",
              "Project": "GPU-Batch-Processing"
            },
            "vpc_id": "vpc-0600548f19dbecfd0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c36051f122c4927",
            "association_id": "eipassoc-0aa940697e02ed33f",
            "connectivity_type": "public",
            "id": "nat-0952d9c042be219f4",
            "network_interface_id": "eni-0f4f80305c35ed42f",
            "private_ip": "10.0.1.31",
            "public_ip": "34.195.154.238",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d2ee8a569aa772f7",
            "tags": {
              "Name": "gpu-batch-vpc-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-vpc-us-east-1a",
              "Project": "GPU-Batch-Processing"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02e011f4eceede1ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0952d9c042be219f4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02e011f4eceede1ee",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bb013f94a410e1bc",
            "id": "r-rtb-01958e41993bc77df1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01958e41993bc77df",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:route-table/rtb-02e011f4eceede1ee",
            "id": "rtb-02e011f4eceede1ee",
            "owner_id": "093646564071",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gpu-batch-vpc-private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-vpc-private",
              "Project": "GPU-Batch-Processing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600548f19dbecfd0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:route-table/rtb-01958e41993bc77df",
            "id": "rtb-01958e41993bc77df",
            "owner_id": "093646564071",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gpu-batch-vpc-public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-vpc-public",
              "Project": "GPU-Batch-Processing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600548f19dbecfd0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d896fc824cb5a567",
            "route_table_id": "rtb-02e011f4eceede1ee",
            "subnet_id": "subnet-007edacc1d763da46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03740bf2c6230bfae",
            "route_table_id": "rtb-02e011f4eceede1ee",
            "subnet_id": "subnet-073b7eec843a54a6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f43a1661f31d37db",
            "route_table_id": "rtb-01958e41993bc77df",
            "subnet_id": "subnet-0d2ee8a569aa772f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa77cd8c01ac3aab",
            "route_table_id": "rtb-01958e41993bc77df",
            "subnet_id": "subnet-0684cfbd466bd450d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:subnet/subnet-007edacc1d763da46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007edacc1d763da46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "093646564071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gpu-batch-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-vpc-private-us-east-1a",
              "Project": "GPU-Batch-Processing"
            },
            "vpc_id": "vpc-0600548f19dbecfd0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:subnet/subnet-073b7eec843a54a6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073b7eec843a54a6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "093646564071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gpu-batch-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-vpc-private-us-east-1b",
              "Project": "GPU-Batch-Processing"
            },
            "vpc_id": "vpc-0600548f19dbecfd0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:subnet/subnet-0d2ee8a569aa772f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2ee8a569aa772f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "093646564071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gpu-batch-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-vpc-public-us-east-1a",
              "Project": "GPU-Batch-Processing"
            },
            "vpc_id": "vpc-0600548f19dbecfd0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:subnet/subnet-0684cfbd466bd450d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0684cfbd466bd450d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "093646564071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gpu-batch-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-vpc-public-us-east-1b",
              "Project": "GPU-Batch-Processing"
            },
            "vpc_id": "vpc-0600548f19dbecfd0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093646564071:vpc/vpc-0600548f19dbecfd0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-003f2e76cf876cd53",
            "default_route_table_id": "rtb-0757533fa76e63184",
            "default_security_group_id": "sg-017a1039aab0d642f",
            "dhcp_options_id": "dopt-0be441488ccbf679d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0600548f19dbecfd0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0757533fa76e63184",
            "owner_id": "093646564071",
            "tags": {
              "Name": "gpu-batch-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "gpu-batch-vpc",
              "Project": "GPU-Batch-Processing"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}